# fediboard-poc

./: .gitignore  Cargo.toml  Containerfile  README.md  index.html  postgrestools.jsonc
.sqlx/: query-39087c8dbb1c33b3d94146bc59b9d62c4a8a020040a13bc512f94ca3b9e4f9ef.json  query-6effc0bbe711a27175f62bc18d8306613f25ba6119e213693fdd353b428d06a1.json  query-8741e2ea7ad706f80194feea66b9525382ebc705eb9a6cd4af53b6e6aff29a15.json  query-d2bef9cc3d1c72c99e99ac02db0e3fbdd763f63c4c400e4f9658652365dbe81d.json
migrations/: 1_board.sql
src/: board.rs  file.rs  http.rs  infra.rs  main.rs  routing.rs  thread.rs  use_case_registry.rs
src/board/: board_query.rs  board_use_case.rs
src/infra/: db.rs  dependency_injection.rs  http.rs  persistence.rs  routing.rs  use_case_registry.rs
src/infra/persistence/: board_persistence.rs  thread_persistence.rs
src/infra/persistence/board_persistence/: query.rs
src/infra/persistence/thread_persistence/: query.rs
src/infra/routing/: board_routes.rs  file_routes.rs  openapi_routes.rs  post_routes.rs  thread_routes.rs
src/thread/: handler.rs  post.rs  query.rs  thread.rs  thread_handler.rs  thread_use_case.rs
src/thread/post/: post_use_case.rs
