[package]
name = "fediboard-poc"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros", "multipart"] }
dotenvy = "0.15.7"
serde = { version = "1.0.225", features = ["serde_derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["json", "postgres", "runtime-tokio", "uuid"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
